Bindings/Ogre/hBuild/HGamer3D/Bindings/Ogre/ClassSceneManager.chs


{- function isSkyPlaneEnabled -}
{#fun ogre_scmgr_isSkyPlaneEnabled as isSkyPlaneEnabled 
{ withHG3DClass* `HG3DClass' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function getSkyPlaneNode -}
{#fun ogre_scmgr_getSkyPlaneNode as getSkyPlaneNode 
{ withHG3DClass* `HG3DClass' ,
 alloca- `HG3DClass' peek*} -> `()'  #}

{- function setSkyBox -}
{#fun ogre_scmgr_setSkyBox as setSkyBox 
{ withHG3DClass* `HG3DClass' ,
 fromBool `Bool' ,
 withCString* `String' ,
 realToFrac `Float' ,
 fromBool `Bool' ,
 withQuaternion* `Quaternion' ,
 withCString* `String' } -> `()'  #}

{- function setSkyBoxEnabled -}
{#fun ogre_scmgr_setSkyBoxEnabled as setSkyBoxEnabled 
{ withHG3DClass* `HG3DClass' ,
 fromBool `Bool' } -> `()'  #}

{- function isSkyBoxEnabled -}
{#fun ogre_scmgr_isSkyBoxEnabled as isSkyBoxEnabled 
{ withHG3DClass* `HG3DClass' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function getSkyBoxNode -}
{#fun ogre_scmgr_getSkyBoxNode as getSkyBoxNode 
{ withHG3DClass* `HG3DClass' ,
 alloca- `HG3DClass' peek*} -> `()'  #}

{- function setSkyDome -}
{#fun ogre_scmgr_setSkyDome as setSkyDome 
{ withHG3DClass* `HG3DClass' ,
 fromBool `Bool' ,
 withCString* `String' ,
 realToFrac `Float' ,
 realToFrac `Float' ,
 realToFrac `Float' ,
 fromBool `Bool' ,
 withQuaternion* `Quaternion' ,
 fromIntegral `Int' ,
 fromIntegral `Int' ,
 fromIntegral `Int' ,
 withCString* `String' } -> `()'  #}

{- function setSkyDomeEnabled -}
{#fun ogre_scmgr_setSkyDomeEnabled as setSkyDomeEnabled 
{ withHG3DClass* `HG3DClass' ,
 fromBool `Bool' } -> `()'  #}

{- function isSkyDomeEnabled -}
{#fun ogre_scmgr_isSkyDomeEnabled as isSkyDomeEnabled 
{ withHG3DClass* `HG3DClass' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function getSkyDomeNode -}
{#fun ogre_scmgr_getSkyDomeNode as getSkyDomeNode 
{ withHG3DClass* `HG3DClass' ,
 alloca- `HG3DClass' peek*} -> `()'  #}

{- function getFogColour -}
{#fun ogre_scmgr_getFogColour as getFogColour 
{ withHG3DClass* `HG3DClass' ,
 alloca- `Colour' peekColour*} -> `()'  #}

{- function getFogStart -}
{#fun ogre_scmgr_getFogStart as getFogStart 
{ withHG3DClass* `HG3DClass' ,
 alloca- `Float' peekFloatConv*} -> `()'  #}

{- function getFogEnd -}
{#fun ogre_scmgr_getFogEnd as getFogEnd 
{ withHG3DClass* `HG3DClass' ,
 alloca- `Float' peekFloatConv*} -> `()'  #}

{- function getFogDensity -}
{#fun ogre_scmgr_getFogDensity as getFogDensity 
{ withHG3DClass* `HG3DClass' ,
 alloca- `Float' peekFloatConv*} -> `()'  #}

{- function createBillboardSet -}
{#fun ogre_scmgr_createBillboardSet as createBillboardSet 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' ,
 fromIntegral `Int' ,
 alloca- `HG3DClass' peek*} -> `()'  #}

{- function createBillboardSet2 -}
{#fun ogre_scmgr_createBillboardSet2 as createBillboardSet2 
{ withHG3DClass* `HG3DClass' ,
 fromIntegral `Int' ,
 alloca- `HG3DClass' peek*} -> `()'  #}

{- function getBillboardSet -}
{#fun ogre_scmgr_getBillboardSet as getBillboardSet 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' ,
 alloca- `HG3DClass' peek*} -> `()'  #}

{- function hasBillboardSet -}
{#fun ogre_scmgr_hasBillboardSet as hasBillboardSet 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function destroyBillboardSet -}
{#fun ogre_scmgr_destroyBillboardSet as destroyBillboardSet 
{ withHG3DClass* `HG3DClass' ,
 withHG3DClass* `HG3DClass' } -> `()'  #}

{- function destroyBillboardSet2 -}
{#fun ogre_scmgr_destroyBillboardSet2 as destroyBillboardSet2 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' } -> `()'  #}

{- function destroyAllBillboardSets -}
{#fun ogre_scmgr_destroyAllBillboardSets as destroyAllBillboardSets 
{ withHG3DClass* `HG3DClass' } -> `()'  #}

{- function setDisplaySceneNodes -}
{#fun ogre_scmgr_setDisplaySceneNodes as setDisplaySceneNodes 
{ withHG3DClass* `HG3DClass' ,
 fromBool `Bool' } -> `()'  #}

{- function getDisplaySceneNodes -}
{#fun ogre_scmgr_getDisplaySceneNodes as getDisplaySceneNodes 
{ withHG3DClass* `HG3DClass' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function createAnimation -}
{#fun ogre_scmgr_createAnimation as createAnimation 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' ,
 realToFrac `Float' ,
 alloca- `HG3DClass' peek*} -> `()'  #}

{- function getAnimation -}
{#fun ogre_scmgr_getAnimation as getAnimation 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' ,
 alloca- `HG3DClass' peek*} -> `()'  #}

{- function hasAnimation -}
{#fun ogre_scmgr_hasAnimation as hasAnimation 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function destroyAnimation -}
{#fun ogre_scmgr_destroyAnimation as destroyAnimation 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' } -> `()'  #}

{- function destroyAllAnimations -}
{#fun ogre_scmgr_destroyAllAnimations as destroyAllAnimations 
{ withHG3DClass* `HG3DClass' } -> `()'  #}

{- function createAnimationState -}
{#fun ogre_scmgr_createAnimationState as createAnimationState 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' ,
 alloca- `HG3DClass' peek*} -> `()'  #}

{- function getAnimationState -}
{#fun ogre_scmgr_getAnimationState as getAnimationState 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' ,
 alloca- `HG3DClass' peek*} -> `()'  #}

{- function hasAnimationState -}
{#fun ogre_scmgr_hasAnimationState as hasAnimationState 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function destroyAnimationState -}
{#fun ogre_scmgr_destroyAnimationState as destroyAnimationState 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' } -> `()'  #}

{- function destroyAllAnimationStates -}
{#fun ogre_scmgr_destroyAllAnimationStates as destroyAllAnimationStates 
{ withHG3DClass* `HG3DClass' } -> `()'  #}

{- function clearSpecialCaseRenderQueues -}
{#fun ogre_scmgr_clearSpecialCaseRenderQueues as clearSpecialCaseRenderQueues 
{ withHG3DClass* `HG3DClass' } -> `()'  #}

{- function setSpecialCaseRenderQueueMode -}
{#fun ogre_scmgr_setSpecialCaseRenderQueueMode as setSpecialCaseRenderQueueMode 
{ withHG3DClass* `HG3DClass' ,
 cIntFromEnum `EnumSceneManagerSpecialCaseRenderQueueMode' } -> `()'  #}

{- function getSpecialCaseRenderQueueMode -}
{#fun ogre_scmgr_getSpecialCaseRenderQueueMode as getSpecialCaseRenderQueueMode 
{ withHG3DClass* `HG3DClass' ,
 alloca- `EnumSceneManagerSpecialCaseRenderQueueMode' peekEnumUtil*} -> `()'  #}

{- function showBoundingBoxes -}
{#fun ogre_scmgr_showBoundingBoxes as showBoundingBoxes 
{ withHG3DClass* `HG3DClass' ,
 fromBool `Bool' } -> `()'  #}

{- function getShowBoundingBoxes -}
{#fun ogre_scmgr_getShowBoundingBoxes as getShowBoundingBoxes 
{ withHG3DClass* `HG3DClass' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function setShowDebugShadows -}
{#fun ogre_scmgr_setShowDebugShadows as setShowDebugShadows 
{ withHG3DClass* `HG3DClass' ,
 fromBool `Bool' } -> `()'  #}

{- function getShowDebugShadows -}
{#fun ogre_scmgr_getShowDebugShadows as getShowDebugShadows 
{ withHG3DClass* `HG3DClass' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function setShadowColour -}
{#fun ogre_scmgr_setShadowColour as setShadowColour 
{ withHG3DClass* `HG3DClass' ,
 withColour* `Colour' } -> `()'  #}

{- function getShadowColour -}
{#fun ogre_scmgr_getShadowColour as getShadowColour 
{ withHG3DClass* `HG3DClass' ,
 alloca- `Colour' peekColour*} -> `()'  #}

{- function setShadowDirectionalLightExtrusionDistance -}
{#fun ogre_scmgr_setShadowDirectionalLightExtrusionDistance as setShadowDirectionalLightExtrusionDistance 
{ withHG3DClass* `HG3DClass' ,
 realToFrac `Float' } -> `()'  #}

{- function getShadowDirectionalLightExtrusionDistance -}
{#fun ogre_scmgr_getShadowDirectionalLightExtrusionDistance as getShadowDirectionalLightExtrusionDistance 
{ withHG3DClass* `HG3DClass' ,
 alloca- `Float' peekFloatConv*} -> `()'  #}

{- function setShadowFarDistance -}
{#fun ogre_scmgr_setShadowFarDistance as setShadowFarDistance 
{ withHG3DClass* `HG3DClass' ,
 realToFrac `Float' } -> `()'  #}

{- function getShadowFarDistance -}
{#fun ogre_scmgr_getShadowFarDistance as getShadowFarDistance 
{ withHG3DClass* `HG3DClass' ,
 alloca- `Float' peekFloatConv*} -> `()'  #}

{- function getShadowFarDistanceSquared -}
{#fun ogre_scmgr_getShadowFarDistanceSquared as getShadowFarDistanceSquared 
{ withHG3DClass* `HG3DClass' ,
 alloca- `Float' peekFloatConv*} -> `()'  #}

{- function setShadowIndexBufferSize -}
{#fun ogre_scmgr_setShadowIndexBufferSize as setShadowIndexBufferSize 
{ withHG3DClass* `HG3DClass' ,
 fromIntegral `Int' } -> `()'  #}

{- function getShadowIndexBufferSize -}
{#fun ogre_scmgr_getShadowIndexBufferSize as getShadowIndexBufferSize 
{ withHG3DClass* `HG3DClass' ,
 alloca- `Int' peekIntConv*} -> `()'  #}

{- function setShadowTextureSize -}
{#fun ogre_scmgr_setShadowTextureSize as setShadowTextureSize 
{ withHG3DClass* `HG3DClass' ,
 fromIntegral `Int' } -> `()'  #}

{- function setShadowTextureFSAA -}
{#fun ogre_scmgr_setShadowTextureFSAA as setShadowTextureFSAA 
{ withHG3DClass* `HG3DClass' ,
 fromIntegral `Int' } -> `()'  #}

{- function setShadowTextureCount -}
{#fun ogre_scmgr_setShadowTextureCount as setShadowTextureCount 
{ withHG3DClass* `HG3DClass' ,
 fromIntegral `Int' } -> `()'  #}

{- function getShadowTextureCount -}
{#fun ogre_scmgr_getShadowTextureCount as getShadowTextureCount 
{ withHG3DClass* `HG3DClass' ,
 alloca- `Int' peekIntConv*} -> `()'  #}

{- function setShadowTextureCountPerLightType -}
{#fun ogre_scmgr_setShadowTextureCountPerLightType as setShadowTextureCountPerLightType 
{ withHG3DClass* `HG3DClass' ,
 cIntFromEnum `EnumLightType' ,
 fromIntegral `Int' } -> `()'  #}

{- function getShadowTextureCountPerLightType -}
{#fun ogre_scmgr_getShadowTextureCountPerLightType as getShadowTextureCountPerLightType 
{ withHG3DClass* `HG3DClass' ,
 cIntFromEnum `EnumLightType' ,
 alloca- `Int' peekIntConv*} -> `()'  #}

{- function getShadowTexture -}
{#fun ogre_scmgr_getShadowTexture as getShadowTexture 
{ withHG3DClass* `HG3DClass' ,
 fromIntegral `Int' ,
 alloca- `SharedPtr' peekSharedPtr*} -> `()'  #}

{- function setShadowDirLightTextureOffset -}
{#fun ogre_scmgr_setShadowDirLightTextureOffset as setShadowDirLightTextureOffset 
{ withHG3DClass* `HG3DClass' ,
 realToFrac `Float' } -> `()'  #}

{- function getShadowDirLightTextureOffset -}
{#fun ogre_scmgr_getShadowDirLightTextureOffset as getShadowDirLightTextureOffset 
{ withHG3DClass* `HG3DClass' ,
 alloca- `Float' peekFloatConv*} -> `()'  #}

{- function setShadowTextureFadeStart -}
{#fun ogre_scmgr_setShadowTextureFadeStart as setShadowTextureFadeStart 
{ withHG3DClass* `HG3DClass' ,
 realToFrac `Float' } -> `()'  #}

{- function setShadowTextureFadeEnd -}
{#fun ogre_scmgr_setShadowTextureFadeEnd as setShadowTextureFadeEnd 
{ withHG3DClass* `HG3DClass' ,
 realToFrac `Float' } -> `()'  #}

{- function setShadowTextureSelfShadow -}
{#fun ogre_scmgr_setShadowTextureSelfShadow as setShadowTextureSelfShadow 
{ withHG3DClass* `HG3DClass' ,
 fromBool `Bool' } -> `()'  #}

{- function getShadowTextureSelfShadow -}
{#fun ogre_scmgr_getShadowTextureSelfShadow as getShadowTextureSelfShadow 
{ withHG3DClass* `HG3DClass' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function setShadowTextureCasterMaterial -}
{#fun ogre_scmgr_setShadowTextureCasterMaterial as setShadowTextureCasterMaterial 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' } -> `()'  #}

{- function setShadowTextureReceiverMaterial -}
{#fun ogre_scmgr_setShadowTextureReceiverMaterial as setShadowTextureReceiverMaterial 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' } -> `()'  #}

{- function setShadowCasterRenderBackFaces -}
{#fun ogre_scmgr_setShadowCasterRenderBackFaces as setShadowCasterRenderBackFaces 
{ withHG3DClass* `HG3DClass' ,
 fromBool `Bool' } -> `()'  #}
